// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EthereumSig > should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x53d98050a9738da0eac7498d909ea03f6eb03d07fb95877b54ff8acf7712276",
    "executionStrategy": {
      "addr": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
      "params": [
        "0x101",
      ],
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
    "strategies": [
      {
        "address": "0x13bcbe7318fb8aa219d264dcf5916feb873e596389ba93d923f9a23378cb743",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "message": {
      "authenticator": "0x53d98050a9738da0eac7498d909ea03f6eb03d07fb95877b54ff8acf7712276",
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "chainId": "0x534e5f5345504f4c4941",
      "executionStrategy": {
        "address": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
        "params": [
          "0x101",
        ],
      },
      "metadataUri": [
        "0x697066733a2f2f516d4e726d36784b75696231544874576b694e35434b7442",
        "0x4565725143447055746d6744716961553278446d6361",
      ],
      "salt": "0x0",
      "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
      "userProposalValidationParams": [
        "0",
      ],
    },
    "primaryType": "Propose",
    "signature": [
      "0xd5afddac398067aba3b0a187711756028c58581eb2960c14e0c13d2aacdbfe2a",
      "0x932b410160287438497b7babbea7993f3c1226339c2972c96236a44989eb5ee",
      "0x1b",
    ],
  },
}
`;

exports[`EthereumSig > should create update proposal envelope 1`] = `
{
  "data": {
    "authenticator": "0x53d98050a9738da0eac7498d909ea03f6eb03d07fb95877b54ff8acf7712276",
    "executionStrategy": {
      "addr": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
      "params": [
        "0x101",
      ],
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "proposal": 1,
    "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "message": {
      "authenticator": "0x53d98050a9738da0eac7498d909ea03f6eb03d07fb95877b54ff8acf7712276",
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "chainId": "0x534e5f5345504f4c4941",
      "executionStrategy": {
        "address": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
        "params": [
          "0x101",
        ],
      },
      "metadataUri": [
        "0x697066733a2f2f516d4e726d36784b75696231544874576b694e35434b7442",
        "0x4565725143447055746d6744716961553278446d6361",
      ],
      "proposalId": "0x1",
      "salt": "0x0",
      "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
    },
    "primaryType": "UpdateProposal",
    "signature": [
      "0x529e1995ccb8396a24ba7474308f4877654b71ddd15aa3e71f0385da4890551",
      "0x30b965f2c15e9b4c7d319ed4f2049d0078987da74b34e74e9ca0228868ead914",
      "0x1c",
    ],
  },
}
`;

exports[`EthereumSig > should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x53d98050a9738da0eac7498d909ea03f6eb03d07fb95877b54ff8acf7712276",
    "choice": 1,
    "metadataUri": "",
    "proposal": 1,
    "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
    "strategies": [
      {
        "address": "0x13bcbe7318fb8aa219d264dcf5916feb873e596389ba93d923f9a23378cb743",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "message": {
      "authenticator": "0x53d98050a9738da0eac7498d909ea03f6eb03d07fb95877b54ff8acf7712276",
      "chainId": "0x534e5f5345504f4c4941",
      "choice": "0x1",
      "metadataUri": [],
      "proposalId": "0x1",
      "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
      "userVotingStrategies": [],
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "primaryType": "Vote",
    "signature": [
      "0x2986292e9bf23c0f9f738fd32556f8096631c883dec6c4d771d2ce65d69649c7",
      "0x2b068bd532570c93e54ac22b0c1e8683229e26c6677c0a68bc677da1a05668ad",
      "0x1b",
    ],
  },
}
`;
